--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "esm": "^3.2.25",
     "express": "^4.17.1",
     "mongoose": "^6.0.12",
+    "mongoose-unique-validator": "^3.0.0",
     "nodemon": "^2.0.15"
   }
 }
